# adcs-math-simulation

./: .gitignore  CMakeLists.txt  README.md
include/: AdcsMath.h  AstroLib.h  Constants.h  Controls.h  DateTime.h  EopSpw.h  Location.h  SGP4DC.h  Sgp4.h  VectorManipulation.h
include/adcs/: ADCS.h  AstroLib.h  Body.h  Constants.h  Controls.h  DTM_12.h  DateTime.h  EKF.h  EopSpw.h  Location.h  MSIS_Vers.h  MathTimeLib.h  SGP4.h  Satellite.h  SimplifiedGeneralPerturbations.h  TrueEquatorMeanEquinox.h  Utilities.h  Utils.h
include/old/: ADCS.h  Controls.h  EKF.h  EopSpw.h  Location.h  SGP4.h  TrueEquatorMeanEquinox.h  Utilities.h
include/simulation/: Satellite.h  Simulation.h
src/: AdcsMath.cpp  AstroLib.cpp  Controls.cpp  DateTime.cpp  EopSpw.cpp  Location.cpp  MSIS_Vers.cpp  Main.cpp  Raven.py  SGP4DC.cpp  Sgp4.cpp  Simulation.py  VectorManipulation.cpp
src/adcs/: ADCS.cpp  AstroLib.cpp  Controls.cpp  DateTime.cpp  KalmanFilter.cpp  Location.cpp  Main.cpp  MathTimeLib.cpp  SGP4.cpp  Satellite.cpp  SimplifiedGeneralPerturbations.cpp  Utilities.cpp  Utils.cpp
src/old/: ADCS.cpp  Controls.cpp  DTM_12.cpp  DateTime.cpp  KalmanFilter.cpp  Location.cpp  Main.cpp  MathTimeLib.cpp  SGP4.cpp  SimplifiedGeneralPerturbations.cpp  TrueEquatorMeanEquinox.cpp  Utilities.cpp
src/simulation/: Satellite.cpp  Simulation.cpp
